# ck-android

./: .gitignore  .gitmodules  .java-version  Gemfile  README.md  android_commons.gradle  android_feature_dependencies.gradle  build.gradle  d  settings.gradle
app/: build.gradle  google-services.json
app/dev/release/: output-metadata.json
app/prod/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
data/local/: build.gradle
data/remote/: build.gradle
data/repository/: build.gradle
database/: build.gradle
database/src/main/: AndroidManifest.xml
domain/: build.gradle
dragonsrp/: build.gradle
dragonsrp/src/main/cpp/: CMakeLists.txt  dragonsrp.cpp
dragonsrp/src/main/cpp/libs/arm64-v8a/: libssl.so.1.1
dragonsrp/src/main/cpp/libs/arm64-v8a/pkgconfig/: libssl.pc  openssl.pc
dragonsrp/src/main/cpp/libs/x86/pkgconfig/: libcrypto.pc
fastlane/: Fastfile
fastlane/notes/: qa-note.txt
features/auth/: build.gradle
features/calls/: build.gradle
features/chat/: build.gradle
features/profile/: build.gradle
features/shared/: build.gradle
features/splash/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
janusclientapi/: build.gradle  proguard-rules.pro
januswrapper/: build.gradle
navigation/: build.gradle
repository/: build.gradle
srp/: build.gradle
srp/src/main/cpp/: CMakeLists.txt  srp.cpp
srp/src/main/cpp/libs/arm64-v8a/: libcrypto.so.1.1
srp/src/main/cpp/libs/arm64-v8a/pkgconfig/: libcrypto.pc
srp/src/main/cpp/libs/armeabi-v7a/: libssl.so.1.1
srp/src/main/cpp/libs/armeabi-v7a/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
srp/src/main/cpp/libs/x86/: libcrypto.so.1.1
srp/src/main/cpp/libs/x86/pkgconfig/: libssl.pc  openssl.pc
(+1533 files in other folders)
